--- a/src/components/Header/header.styles.scss
+++ b/src/components/Header/header.styles.scss
@@ -25,5 +25,40 @@
       }
     }
   }
+  @media  screen and (max-width:560px) {
+    .header{
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      // background: #000;
+
+      height: 200px;
+    }
+    .options{
+      width: 30%;
+    
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+    }
+    .logo{
+      width: 110px;
+  
+      margin-left: 143px;
+      margin-top: -22px;
+     
+    }
+    
+  }
+  @media  screen and (max-width:380px) {
+
+    .logo{
+      width: 110px;
+  
+      margin-left: 43px;
+      margin-top: -22px;
+     
+    }
+  }
 
   
