--- a/src/components/SignUp/signUp.styles.scss
+++ b/src/components/SignUp/signUp.styles.scss
@@ -1,9 +1,17 @@
 .sign-up {
     display: flex;
     flex-direction: column;
-    width: 380px;
+    width: 350px;
   
     .title {
       margin: 10px 0;
     }
   }
+  @media only screen and (max-width:910px){
+    .sign-up{
+       display: flex;
+       flex-direction: column;
+       flex-wrap: wrap;
+      
+    }
+}
