--- a/src/components/forms/FormSelect/styles.scss
+++ b/src/components/forms/FormSelect/styles.scss
@@ -23,3 +23,10 @@
       cursor: pointer;
     }
   }
+  @media screen and (max-width:640px) 
+    {
+      select{
+        font-size: 1rem;
+        font-weight: 200;
+      }
+    }
