--- a/src/components/menu-items/menu-items.styles.scss
+++ b/src/components/menu-items/menu-items.styles.scss
@@ -63,3 +63,76 @@
       }
     }
 }
+
+@media screen and (max-width:448px) {
+  .menu-item{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 113%;
+  }
+  .content{
+    width: 130px;
+  
+    text-align: center;
+  .title {
+    font-weight: bold;
+    margin-bottom: 6px;
+    font-size: 15px;
+    color: #4a4a4a;
+  }
+
+  .subtitle {
+    font-weight: lighter;
+    font-size: 12px;
+  }
+}
+}
+@media screen and (max-width:380px) {
+  .menu-item{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 160%;
+  }
+  .content{
+    width: 130px;
+  
+    text-align: center;
+  .title {
+    font-weight: bold;
+    margin-bottom: 6px;
+    font-size: 10px;
+    color: #4a4a4a;
+  }
+
+  .subtitle {
+    font-weight: lighter;
+    font-size: 8px;
+  }
+}
+}
+@media screen and (max-width:340px) {
+  .menu-item{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 180%;
+  }
+  .content{
+    width: 130px;
+  
+    text-align: center;
+  .title {
+    font-weight: bold;
+    margin-bottom: 6px;
+    font-size: 10px;
+    color: #4a4a4a;
+  }
+
+  .subtitle {
+    font-weight: lighter;
+    font-size: 8px;
+  }
+}
+}
