--- a/src/pages/SignINAndSignUP/SignINAndSignUP.styles.scss
+++ b/src/pages/SignINAndSignUP/SignINAndSignUP.styles.scss
@@ -4,11 +4,23 @@
     justify-content: space-between;
     margin: 30px auto;
   }
-  @media only screen and (max-width:800px){
+  @media only screen and (max-width:910px){
     .sign-in-sign-up{
     
       flex-direction: column;
-     
+      display: flex;
+      flex-wrap: wrap;
+      width: 500px;
+  
+    }
+  }
+  @media only screen and (max-width:550px){
+    .sign-in-sign-up{
+    
+      flex-direction: column;
+      display: flex;
+      flex-wrap: wrap;
+      width: 300px;
   
     }
   }
